--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.simples</groupId>
+    <groupId>br.com.testes.lab</groupId>
     <artifactId>java-testes-unitarios-lab</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
@@ -13,11 +13,11 @@
 
     <modules>
         <module>classes-simples</module>
-        <module>outro-modulo</module>
+        <module>api-pedidos</module>
     </modules>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
