--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -1,21 +1,29 @@
-create-pull-request:
-  if: github.ref == 'refs/heads/develop'
-  runs-on: ubuntu-latest
-  permissions:
-    contents: write
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+name: Create Pull Request
 
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+# Dispara o workflow em eventos de push na branch develop
+on:
+  push:
+    branches:
+      - develop
 
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v5
-      with:
-        branch: main
-        title: "Merge develop into main"
-        body: "Este pull request foi criado automaticamente para sincronizar as alterações da branch develop com a branch main."
-        labels: "automated-pull-request"
+jobs:
+  create-pull-request:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          branch: main
+          title: "Merge develop into main"
+          body: "Este pull request foi criado automaticamente para sincronizar as alterações da branch develop com a branch main."
+          labels: "automated-pull-request"
