fix create-pull-request and maven.yml

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -11,19 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: write
+
     steps:
+      # Faz o checkout do código do repositório
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Configura o Git para criar o pull request
       - name: Configure Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      # Cria um pull request da branch develop para a branch main
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          branch: main
+          source-branch: develop
+          target-branch: main
           title: "Merge develop into main"
-          body: "Este pull request foi criado automaticamente para sincronizar as alterações da branch develop com a branch main."
+          body: |
+            Este pull request foi criado automaticamente para sincronizar as alterações da branch develop com a branch main.
           labels: "automated-pull-request"
