add module: api-produtos-integration-tests

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>classes-simples</module>
         <module>api-pedidos</module>
+        <module>api-produtos-integration-tests</module>
     </modules>
 
     <properties>
