--- a/classes-simples/pom.xml
+++ b/classes-simples/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.example</groupId>
   <artifactId>classes-simples</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <name>classes-simples</name>
   <!-- FIXME change it to the project's website -->
@@ -13,7 +13,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>17</maven.compiler.release>
+    <java.version>21</java.version>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
   </properties>
 
   <dependencyManagement>
