tarefas: add exception handler

--- a/api-todotarefas/src/main/resources/application-dev.properties
+++ b/api-todotarefas/src/main/resources/application-dev.properties
@@ -60,5 +60,5 @@ spring.h2.console.path=/h2-console
 
 # Defer DataSource initialization (running data.sql) until after JPA setup (Hibernate DDL)
 # This ensures tables exist before data.sql tries to insert into them.
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.data-locations=classpath:init.sql
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:init.sql
