--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
         <module>api-pedidos</module>
         <module>api-produtos-integration-tests</module>
         <module>api-todotarefas</module>
+        <module>api-bdd-tests</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
